08-traefik-v2.2-deploy/traefik-route-file/kubernetes-dashboard-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: scm-local-tls
  routes:
    - match: Host(`dash.scm.local`) 
      kind: Rule
      services:
        #- name: kubernetes-dashboard
        - name: kubernetes-dashboard
          port: 443
